--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "pug": "^3.0.3"
   }
 }
