--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "serverstart": "SET DEBUG=express express-genapp:* & npm run devstart"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
     "pug": "^3.0.3"
