--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "~1.9.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
